all section done

--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
               <div class="header-align">
                 <div class="header-navigation-area d-none d-xl-block">
                   <ul class="main-menu nav position-relative">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="#about">About</a></li>
-
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="#results">Results</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
                   </ul>
                 </div>
                 <div class="header-action-area">
@@ -252,20 +253,17 @@
                     </h2>
                     <div class="desc">
                       <p>
-                        Gym is very important to maintain our health luptas sit
-                        fugit, sed quia cuuntur magni dolores eos qui rat ione
-                        volupta pleasure rationally encounter consequences that
-                        are extremely
+                        Minnat Vigour Gym is located in Mumbra, and our goal is to provide the best training to all women in Mumbra. Our ladies gym has certified trainers who help our clients in achieving their goals, whether it's losing weight or gaining weight. In Mumbra, our gym has the best amenities and equipment. We offer a variety of services, including weight loss, weight gain, crossfit, diet and nutrition, kickboxing, and more. We offer one of the most comprehensive training in Mumbra.
                       </p>
                     </div>
                   </div>
                   <div class="inner-content">
                     <div class="about-list">
                       <ul>
-                        <li>Builds Aerobic Power</li>
-                        <li>Strong body Structure</li>
-                        <li>Boots your Memory</li>
-                        <li>Brng about resultful Sleep</li>
+                        <li>Weight loss in mumbra</li>
+                        <li>Best ladies gym in mumbra</li>
+                        <li>Self defence for women</li>
+                        <li>Zumba</li>
                       </ul>
                     </div>
                     <div class="inline-style">
@@ -449,9 +447,7 @@
                   <h2 class="title"><span>CLASSES </span>WE PROVIDE</h2>
                   <div class="desc">
                     <p>
-                      Gym classes dolor sit amet, consectetur adipiscing elit,
-                      sed do eiod tempor <br />didunt ut labore et dolore m et
-                      dolore magna aliqua minim niam
+                      In Mumbra, we have the most comprehensive list of services. We aim to provide <br /> the best training and guidance to help our clients in achieving their goals.
                     </p>
                   </div>
                 </div>
@@ -465,7 +461,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service1.jpg"
@@ -487,7 +483,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service2.jpg"
@@ -509,7 +505,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service3.jpg"
@@ -529,7 +525,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service18.jpg"
@@ -551,7 +547,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service4.jpg"
@@ -573,7 +569,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service5.jpg"
@@ -597,7 +593,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service6.jpg"
@@ -621,7 +617,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service7.jpg"
@@ -645,7 +641,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service8.jpg"
@@ -669,7 +665,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service9.jpg"
@@ -693,7 +689,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service10.jpg"
@@ -717,7 +713,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service11.jpg"
@@ -741,7 +737,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service12.jpg"
@@ -765,7 +761,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service13.jpg"
@@ -789,7 +785,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service14.jpg"
@@ -813,7 +809,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service15.jpg"
@@ -837,7 +833,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service16.jpg"
@@ -861,7 +857,7 @@
                     <div class="service-item">
                       <div class="inner-content">
                         <div class="thumb">
-                          <a href="class-details.html"
+                          <a href="#"
                             ><span
                               ><img
                                 src="assets/img/service/service17.jpg"
@@ -999,7 +995,7 @@
         <!-- <div class="spacer" style="margin: 12rem"></div> -->
         
         <!--== Start Team Area ==-->
-        <section class="team-area team-default-area">
+        <section class="team-area team-default-area" id="testimonials">
           <div class="container">
             <div class="row">
               <div class="col-lg-12">
@@ -1036,7 +1032,7 @@
 
 
         <!--== Start Gallery Slider Area Wrapper ==-->
-        <section class="gallery-area gallery-default-area">
+        <section class="gallery-area gallery-default-area" id="results">
           <div class="container">
             <div class="row">
               <div class="col-md-6 col-xl-4 pr-0">
@@ -1274,9 +1270,7 @@
                   <h2 class="title">GYM <span>MEMBERSHIP</span> PLANS</h2>
                   <div class="desc">
                     <p>
-                      Gym classes dolor sit amet, consectetur adipiscing elit,
-                      sed do eiod tempor <br />didunt ut labore et dolore m et
-                      dolore magna aliqua minim niam
+                      We offer best training and facilities with very affordable plans in mumbra.
                     </p>
                   </div>
                 </div>
@@ -1299,7 +1293,7 @@
 
                   <div class="pricing-footer">
                     <div class="pricing-footer-inner">
-                      <a href="#/" class="btn btn-theme">JOIN TODAY</a>
+                      <a href="/contact.html" class="btn btn-theme">JOIN TODAY</a>
                     </div>
                   </div>
                 </div>
@@ -1322,7 +1316,7 @@
 
                   <div class="pricing-footer">
                     <div class="pricing-footer-inner">
-                      <a href="#/" class="btn btn-theme">JOIN TODAY</a>
+                      <a href="/contact.html" class="btn btn-theme">JOIN TODAY</a>
                     </div>
                   </div>
                 </div>
@@ -1345,7 +1339,7 @@
 
                   <div class="pricing-footer">
                     <div class="pricing-footer-inner">
-                      <a href="#/" class="btn btn-theme">JOIN TODAY</a>
+                      <a href="/contact.html" class="btn btn-theme">JOIN TODAY</a>
                     </div>
                   </div>
                 </div>
@@ -1368,7 +1362,7 @@
 
                   <div class="pricing-footer">
                     <div class="pricing-footer-inner">
-                      <a href="#/" class="btn btn-theme">JOIN TODAY</a>
+                      <a href="/contact.html" class="btn btn-theme">JOIN TODAY</a>
                     </div>
                   </div>
                 </div>
@@ -1384,17 +1378,15 @@
         <!--== End Pricing Area Wrapper ==-->
 
         <!--== Start Pricing Area Wrapper ==-->
-        <section class="pricing-area pricing-default-area">
+        <section class="pricing-area pricing-default-area martial-arts-pricing">
           <div class="container">
             <div class="row">
               <div class="col-lg-12">
                 <div class="section-title text-center">
-                  <h2 class="title">CHOOSE YOUR <span>MEMBERSHIP</span></h2>
+                  <h2 class="title">MARTIAL ARTS <span>MEMBERSHIP</span></h2>
                   <div class="desc">
                     <p>
-                      Gym classes dolor sit amet, consectetur adipiscing elit,
-                      sed do eiod tempor <br />didunt ut labore et dolore m et
-                      dolore magna aliqua minim niam
+                      We offer best training and facilities with very affordable plans in mumbra.
                     </p>
                   </div>
                 </div>
@@ -1417,7 +1409,7 @@
 
                   <div class="pricing-footer">
                     <div class="pricing-footer-inner">
-                      <a href="#/" class="btn btn-theme">JOIN TODAY</a>
+                      <a href="/contact.html" class="btn btn-theme">JOIN TODAY</a>
                     </div>
                   </div>
                 </div>
@@ -1440,7 +1432,7 @@
 
                   <div class="pricing-footer">
                     <div class="pricing-footer-inner">
-                      <a href="#/" class="btn btn-theme">JOIN TODAY</a>
+                      <a href="/contact.html" class="btn btn-theme">JOIN TODAY</a>
                     </div>
                   </div>
                 </div>
@@ -1471,8 +1463,7 @@
                       <img src="assets/img/minnat-logo.png" alt="Logo" />
                     </a>
                     <p>
-                      Zymzoo winner dolor sit consectetur adipiscing elit, sed
-                      do eiusmod tempor incididunt ut labore et dolore magna
+                      Minnat Vigour Gym is located in Mumbra, and our goal is to provide the best training to all women in Mumbra. Our ladies gym has certified trainers who help our clients in achieving their goals, whether it's losing weight or gaining weight. 
                     </p>
                     <div class="opening-time">
                       <h4 class="title">Gym Timing</h4>
@@ -1486,12 +1477,14 @@
               </div>
               <div class="col-sm-6 col-md-4 col-lg-3">
                 <div class="widget-item pl-20 pl-sm-0 mb-sm-30 mb-xs-40">
-                  <h4>USEFULL LINK</h4>
+                  <h4>USEFULL LINKS</h4>
                   <nav class="widget-menu-wrap">
                     <ul class="nav-menu nav">
                       <li><a href="/">Home</a></li>
-                      <li><a href="#">About Us</a></li>
-                      <li><a href="contact.html">Contact</a></li>
+                      <li><a href="#about">About</a></li>
+                      <li><a href="#results">Results</a></li>
+                      <li><a href="#testimonials">Testimonials</a></li>
+                      <li><a href="/contact.html">Contact</a></li>
                     </ul>
                   </nav>
                 </div>
@@ -1531,14 +1524,13 @@
                         <img src="assets/img/icons/3.png" alt="Logo" />
                       </div>
                       <div class="content">
-                        <h4 class="title">Web</h4>
+                        <h4 class="title">Email</h4>
                         <ul>
                           <li>
-                            <a href="mailto://info@example.com"
-                              >info@example.com</a
+                            <a href="mailto://sumaiya2896@gmail.com"
+                              >sumaiya2896@gmail.com</a
                             >
                           </li>
-                          <li><a href="index.html">www.example.com</a></li>
                         </ul>
                       </div>
                     </div>
