--- a/team.html
+++ b/team.html
@@ -294,7 +294,7 @@
                       <a href="classes.html">Classes</a>
                       <ul class="submenu-nav">
                         <li><a href="classes.html">Classes</a></li>
-                        <li><a href="class-details.html">Class Details</a></li>
+                        <li><a href="#">Class Details</a></li>
                       </ul>
                     </li>
                     <li class="has-submenu">
