--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,9 @@
                   <ul class="main-menu nav position-relative">
                     <li><a href="/">Home</a></li>
                     <li><a href="/#about">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="/#results">Results</a></li>
+                    <li><a href="/#testimonials">Testimonials</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
                   </ul>
                 </div>
               </div>
@@ -116,11 +118,7 @@
                 <div class="page-title-content content-style2">
                   <h2 class="title"><span>CONTACT </span>US</h2>
                   <div class="desc">
-                    <p>
-                      We have very professional and exprt Instructor and they
-                      can very important to maintain<br />our health luptas sit
-                      fugit, sed quia cuuntur magni dolores some products
-                    </p>
+                    <p></p>
                   </div>
                 </div>
               </div>
@@ -139,7 +137,7 @@
                     <div class="section-title text-center">
                       <h2 class="title">GET IN <span>TOUCH</span></h2>
                       <div class="desc">
-                        <p>Contact us if you neeed information</p>
+                        <p>Contact us if you need information</p>
                       </div>
                     </div>
                   </div>
@@ -185,8 +183,9 @@
                         />
                       </div>
                       <div class="content">
-                        <a href="mailto://info@example.com">info@example.com</a>
-                        <a href="index.html">www.example.com</a>
+                        <a href="mailto://sumaiya2896@gmail.com"
+                          >sumaiya2896@gmail.com</a
+                        >
                       </div>
                     </div>
                   </div>
@@ -208,8 +207,7 @@
                             <div class="desc">
                               <p>
                                 If you need any information, feel free to send
-                                me message I will try to answer your and give
-                                you proper tips about your message
+                                us a message we will answer you shortly.
                               </p>
                             </div>
                           </div>
@@ -232,9 +230,9 @@
                               <div class="form-group">
                                 <input
                                   class="form-control"
-                                  type="email"
+                                  type="tel"
                                   name="con_email"
-                                  placeholder="Email"
+                                  placeholder="Mobile Number"
                                 />
                               </div>
                             </div>
@@ -299,8 +297,11 @@
                       <img src="assets/img/minnat-logo.png" alt="Logo" />
                     </a>
                     <p>
-                      Zymzoo winner dolor sit consectetur adipiscing elit, sed
-                      do eiusmod tempor incididunt ut labore et dolore magna
+                      Minnat Vigour Gym is located in Mumbra, and our goal is to
+                      provide the best training to all women in Mumbra. Our
+                      ladies gym has certified trainers who help our clients in
+                      achieving their goals, whether it's losing weight or
+                      gaining weight.
                     </p>
                     <div class="opening-time">
                       <h4 class="title">Gym Timing</h4>
@@ -318,8 +319,10 @@
                   <nav class="widget-menu-wrap">
                     <ul class="nav-menu nav">
                       <li><a href="/">Home</a></li>
-                      <li><a href="#">About Us</a></li>
-                      <li><a href="contact.html">Contact</a></li>
+                      <li><a href="/#about">About</a></li>
+                      <li><a href="/#results">Results</a></li>
+                      <li><a href="/#testimonials">Testimonials</a></li>
+                      <li><a href="/contact.html">Contact</a></li>
                     </ul>
                   </nav>
                 </div>
@@ -349,7 +352,7 @@
                         <h4 class="title">Phone</h4>
                         <ul>
                           <li>
-                            <a href="tel://09(123)456789">09 (123) 456 789</a>
+                            <a href="tel://+917039536321">+91 7039536321</a>
                           </li>
                         </ul>
                       </div>
@@ -359,14 +362,13 @@
                         <img src="assets/img/icons/3.png" alt="Logo" />
                       </div>
                       <div class="content">
-                        <h4 class="title">Web</h4>
+                        <h4 class="title">Email</h4>
                         <ul>
                           <li>
-                            <a href="mailto://info@example.com"
-                              >info@example.com</a
+                            <a href="mailto://sumaiya2896@gmail.com"
+                              >sumaiya2896@gmail.com</a
                             >
                           </li>
-                          <li><a href="index.html">www.example.com</a></li>
                         </ul>
                       </div>
                     </div>
