--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Contact Us - Minnat Vigour Gym</title>
+    <meta
+      name="description"
+      content="Minnat Vigour Gym is located in Mumbra, and our goal is to provide the best training to all women in Mumbra. "
+    />
+    <!--== Favicon ==-->
 
     <!--== Favicon ==-->
     <link
