--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Best women gym in mumbra - Minnat Vigour Gym</title>
-
+    <meta name="description" content="Minnat Vigour Gym is located in Mumbra, and our goal is to provide the best training to all women in Mumbra. ">
     <!--== Favicon ==-->
     <link
       rel="shortcut icon"
@@ -78,12 +78,12 @@
                   <img
                     class="logo-main"
                     src="assets/img/minnat-logo.png"
-                    alt="Logo"
+                    alt="minnat vigour gym logo"
                   />
                   <img
                     class="logo-light"
                     src="assets/img/minnat-logo.png"
-                    alt="Logo"
+                    alt="minnat vigour gym logo"
                   />
                 </a>
               </div>
@@ -135,7 +135,7 @@
                                 <div class="icon">
                                   <img
                                     src="assets/img/icons/g1.png"
-                                    alt="Image"
+                                    alt="icon - minnat vigour ladies gym mumbra"
                                   />
                                 </div>
                                 <h2>
@@ -152,7 +152,7 @@
                             <div class="slider-thumb">
                               <img
                                 src="assets/img/slider/h-1.png"
-                                alt="Image"
+                                alt="crossfit ladies gym mumbra - minnat vigour gym"
                               />
                             </div>
                           </div>
@@ -167,6 +167,11 @@
           </div>
         </section>
         <!--== End Hero Area Wrapper ==-->
+        <img
+                           class="mobile-hero-image"     
+                                src="assets/img/slider/h-1.png"
+                                alt="crossfit ladies gym mumbra - minnat vigour gym"
+        />
 
         <!--== Start Features Area Wrapper ==-->
         <section class="features-area features-default-area">
@@ -176,7 +181,7 @@
                 <!-- Start Featured Item -->
                 <div class="featured-item">
                   <div class="featured-thumb">
-                    <img src="assets/img/class/f1.jpg" alt="Image" />
+                    <img src="assets/img/class/f1.jpg" alt="weight lifting mumbra - ladies gym minnat vigour" />
                   </div>
                   <div class="featured-info">
                     <h4>Weight Training</h4>
@@ -188,7 +193,7 @@
                 <!-- Start Featured Item -->
                 <div class="featured-item">
                   <div class="featured-thumb">
-                    <img src="assets/img/class/f2.jpg" alt="Image" />
+                    <img src="assets/img/class/f2.jpg" alt="crossfit in mumbra - ladies gym minnat vigour" />
                   </div>
                   <div class="featured-info">
                     <h4>Crossfit</h4>
@@ -200,7 +205,7 @@
                 <!-- Start Featured Item -->
                 <div class="featured-item">
                   <div class="featured-thumb">
-                    <img src="assets/img/class/f3.jpg" alt="Image" />
+                    <img src="assets/img/class/f3.jpg" alt="cardio in mumbra - ladies gym minnat vigour" />
                   </div>
                   <div class="featured-info">
                     <h4>Cardio</h4>
@@ -212,7 +217,7 @@
                 <!-- Start Featured Item -->
                 <div class="featured-item">
                   <div class="featured-thumb">
-                    <img src="assets/img/class/f4.jpg" alt="Image" />
+                    <img src="assets/img/class/f4.jpg" alt="zumba in mumbra - ladies gym minnat vigour" />
                   </div>
                   <div class="featured-info">
                     <h4>Zumba</h4>
@@ -238,7 +243,7 @@
                   data-aos="fade-left"
                   data-aos-duration="1000"
                 >
-                  <img src="assets/img/about/1.png" alt="Image" />
+                  <img src="assets/img/about/1.png" alt="minnat vigour gym mumbra" />
                 </div>
               </div>
               <div class="col-lg-5 col-xl-5 order-0 order-lg-1">
@@ -308,9 +313,7 @@
                           <div class="featured-info">
                             <h4>Best Training</h4>
                             <p>
-                              Best Training dolor sit consectetur adipiscing
-                              elit, sed do eiusmod temp incididunt ut labore et
-                              dolore
+                              We strive to provide the best training for all women and to help them in becoming fit.
                             </p>
                           </div>
                         </div>
@@ -325,9 +328,7 @@
                           <div class="featured-info">
                             <h4>Qualified Instructor</h4>
                             <p>
-                              Qualified Instructor consectetur adipg elit, sed
-                              do eiusmod tempor incididu ut labore dolore are
-                              same magna
+                              At Minnat Vigour Gym, we have certified and experienced trainers to provide you with the best training and guidance.
                             </p>
                           </div>
                         </div>
@@ -342,9 +343,7 @@
                           <div class="featured-info">
                             <h4>Latest Equipment</h4>
                             <p class="m-0">
-                              Latest equipment dolor consectetur adipiscing
-                              elit, sed do eiusmod tempor incididunt ut labore
-                              et dolore magna
+                              We have all the necessary and latest equipment at our gym.
                             </p>
                           </div>
                         </div>
@@ -359,9 +358,7 @@
                           <div class="featured-info">
                             <h4>Award Winners</h4>
                             <p class="m-0">
-                              Award winner dolor sit consectetur adipiscing
-                              elit, sed do eiusmod tempor incididunt ut labore
-                              et dolore magna
+                              Both our gym trainers and clients have won awards in a variety of competitions.
                             </p>
                           </div>
                         </div>
